--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_quote_section_1">Escritores</string>
     <string name="app_quote_section_2">Cita Aleatoria</string>
     <string name="author_alive">Actualidad</string>
+    <string name="quote">\" %s \"</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_img_author">Author Photo</string>
 </resources>
